<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Matching</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">login</string>
    <string name="title_register">Register</string>
    <string name="title_matching">matching</string>
	<string name="title_places">List Place</string>
	<string-array name="menus_array">
        <item>List Place</item>
        <item>Login</item>
        <item>Profile</item>
        <item>Logout</item>
        <item>Favorite</item>
        <item>Friend</item>
        <item>Personal Page</item>
        <item>New Feed</item>
        
    </string-array>
    <string-array name="select_distance">
        <item >100m</item>
        <item >400m</item>
        <item >800m</item>
    </string-array>
    
    <string name="drawer_open">Matching Menu</string>
    <string name="drawer_close">Matching</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="profile_name">Name</string>
    <string name="profile_address">Address</string>
    <string name="profile_email">Email</string>
    <string name="txt_facebook">Login Facebook</string>
    <string name="btn_edit_profile">Edit</string>
    <string name="btn_edit_save_profile">Save</string>
    <string name="action_search">search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="btn_save_profile">Save</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>  
    <string name="register_address">Address</string>
    <string name="register_birth">Birth of date</string>
    <string name="register_city">City</string>
    <string name="register_district">District</string>
    <string name="btn_register">Register</string>
    <string name="register_sex">Sex</string>
    <string name="register_name">Name</string>
    <string name="detail_place">Place</string>
    
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="detail_place_name">Name</string>
    <string name="detail_place_address">Address</string>
    <string name="detail_place_mobile">Mobile</string>
    <string name="btn_comment">Comment</string>
    <string name="detail_place_comment">Comment</string>
    
    <string name="hint_ed_status">What are you thinging?</string>
    <string name="comment_status">Comment Status</string>
    <string name="hint_ed_cmstatus">What do you think about it?</string>
    
    <string name="personalpage">Personal Page</string>
    <string name="listfriend">Friend</string>
    
    <string name="newfeedactivity">New Feed</string>
</resources>
