<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal"
    tools:context=".MatchingActivity" >
    
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_register" 
        android:layout_gravity="center_vertical"
        
        />
   
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        
        <TextView
            android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_name"
            />
        
        <EditText 
            android:id="@+id/register_name"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:hint=""
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        >
        <TextView
            android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_email"
       	 	
            />
        <EditText 
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:inputType="textEmailAddress"
            />
    </LinearLayout>
	<LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        >
        <TextView 
            android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_password"
       	 	
            />
        
        <EditText 
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:inputType="textPassword"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        >
        <TextView
            android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_address"
            />
        
        <EditText
            android:id="@+id/edit_address"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
           android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_sex"
            />
        
        <Spinner
            android:id="@+id/sp_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        >
        <TextView
            android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_birth"
            />
       
        <EditText
            android:id="@+id/edit_birth"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:inputType="date"
            />
        <ImageButton 
            android:id="@+id/register_btn_choosedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="on_choosedate"
            android:src="@drawable/ic_calendar"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        >
        <TextView
            android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_city"
            />
        
        <Spinner
            android:id="@+id/sp_city"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        >
        <TextView
            android:layout_width="80dip"
       	 	android:layout_height="wrap_content"
       	 	android:text="@string/register_district"
            />
        
        <Spinner
            android:id="@+id/sp_district"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	
            />
    </LinearLayout>
    <Button 
        android:layout_gravity="center_vertical"
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:text="@string/btn_register"
       	android:onClick="on_Register"
       	android:background="@drawable/rounded_bt"
        />
    
</LinearLayout>
</ScrollView>