<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".MatchingActivity" 
    
    >
	<ImageView
	    android:id="@+id/profile_image_id"
	    android:layout_width="match_parent"
    	android:layout_height="120dp"
    	android:background="@drawable/avarta"
    	
	    />
	
	<LinearLayout
	    android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:orientation="vertical"
   		android:gravity="center_vertical"
   		android:layout_margin="5dp"
	    >
	    <TextView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#a1a0a2"
    		android:text="@string/profile_name"
    		android:layout_margin="5dp"
	        />
	    <View
		   android:layout_width="fill_parent"
		   android:layout_height="1dp"       
		   android:background="#a1a0a2" />
	     <TextView
	        android:id="@+id/profile_name_id"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#ffffff"
    		android:text=""
	        />
	     
	    <TextView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#a1a0a2"
    		android:text="@string/profile_email"
    		android:layout_margin="5dp"
	        />
	    <View
		   android:layout_width="fill_parent"
		   android:layout_height="1dp"      
		   android:background="#a1a0a2" />
	     <TextView
	        android:id="@+id/profile_email_id"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#ffffff"
    		android:text=""
	        />
	    
	    <TextView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#a1a0a2"
    		android:text="@string/profile_address"
    		android:layout_margin="5dp"
	        />
	    <View
		   android:layout_width="fill_parent"
		   android:layout_height="1dp"
		   android:background="#a1a0a2" />
	     <TextView
	        android:id="@+id/profile_address_id"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#ffffff"
    		android:text=""
	        />
	     
	</LinearLayout>
</LinearLayout>
</ScrollView>