<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".MatchingActivity" 
    
    >
	<ImageView
	    android:id="@+id/detail_place_avarta"
	    android:layout_width="match_parent"
    	android:layout_height="120dp"
    	android:background="@drawable/restaurant"
	    />
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    
	    >
	    
	    <ImageButton 
	        android:id="@+id/btn_favorite_place"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/ic_add_favorite"
	        android:layout_margin="5dip"
	        />
	     <ImageButton 
	        android:id="@+id/btn_like_place"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/ic_like"
	        android:layout_margin="5dip"
	        
	        />
	     
	       <ImageButton
	        android:id="@+id/btn_edit_place"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/ic_edit"
	        android:layout_margin="5dip"
	        />
	      
	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:orientation="vertical"
   		android:gravity="center_vertical"
   		android:layout_margin="5dp"
	    >
	    <TextView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#a1a0a2"
    		android:text="@string/detail_place_name"
    		android:layout_margin="5dp"
    		
	        />
	    
	    <View
		   android:layout_width="fill_parent"
		   android:layout_height="1dp"       
		   android:background="#a1a0a2" />
	     <TextView
	        android:id="@+id/detail_place_name_id"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#000000"
    		android:text="a"
	        />
	     
	    <TextView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#a1a0a2"
    		android:text="@string/detail_place_address"
    		android:layout_margin="5dp"
	        />
	    <View
		   android:layout_width="fill_parent"
		   android:layout_height="1dp"      
		   android:background="#a1a0a2" />
	     <TextView
	        android:id="@+id/detail_place_address"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#000000"
    		android:text=""
	        />
	    
	    <TextView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#a1a0a2"
    		android:text="@string/detail_place_mobile"
    		android:layout_margin="5dp"
	        />
	    <View
		   android:layout_width="fill_parent"
		   android:layout_height="1dp"
		   android:background="#a1a0a2" />
	     <TextView
	        android:id="@+id/detail_place_mobile"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="#000000"
    		android:text=""
	        />
	</LinearLayout>
</LinearLayout>
</ScrollView>